# soglasso

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_quickstart.ipynb  02_reproduce_figure6a.ipynb  03_reproduce_figure6a_multitask.ipynb
soglasso/: __init__.py  baselines.py  data.py  groups.py  model.py  multitask.py  proximal.py
tests/: test_multitask.py  test_soglasso.py
tutorials/: figure6a_multitask_results.csv  figure6a_results.csv  reproduce_figure6a.py  reproduce_figure6a_multitask.py
